2007-12-27  Kenichi Handa  <handa@ni.aist.go.jp>

	* international/mule-cmds.el (select-safe-coding-system): When a
	buffer is modfied, cancel the writing.

2007-12-26  Eric S. Raymond  <esr@snark.thyrsus.com>

	* log-view.el: Add Subversion and Mercurial log format samples.

	* vc.el (vc-dired-hook): Significantly speed up by arranging for
	it to call the backend dir-state hook (if it exists)
	exactly *once*, rather than once per each subdirectory (with
	dired-state-info calls on all toplevel files slowing it down even
	further).  For this to work, backend dir-state methods have to
	recurse to subdirectories.  Most of them already did anyway; a few
	needed *non*-recursion switches removed.  This change mostly
	removed code that was perversely bad and should have been shot
	through the head years ago.

	* vc-bzr.el (vc-bzr-dir-state):
	* vc-cvs.el (vc-cvs-dir-state):
	* vc-mcvs.el (vc-mcvs-dir-state):
	* vc-svn.el (vc-svn-dir-state): Recurse in subdirectories.

	* vc-svn.el (vc-svn-print-log): svn log doesn't actually accept
	multiple arguments, so generate logs sequentially when we get them.
	* vc-hg.el (vc-hg-print-log): Gives this CVS-like "Working file:"
	headers so the various log bindings can do the right thing.
	* vc-cvs.el (vc-cvs-print-log): Fix a misleading comment.

2007-12-26  Andreas Schwab  <schwab@suse.de>

	* font-lock.el (save-buffer-state): Make sure the state of the
	buffer is always restored.

2007-12-26  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-lang-allow-percentsigns): New variable.

	* calc/calc-lang.el (calc-lang-allow-percentsigns): Declare as
	a variable.

	* calc/calccomp.el (math-to-percentsigns): New function.
	(math-compose-var): Handle variables with percent signs.
	(math-compose-expr): Handle function names with percent signs.

	* calc/calc-aent.el (math-to-percentsigns): Declare as function.
	(math-read-exprs): Handle percent signs in languages that
	allow them.
	(math-restore-underscores): Remove function.